--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,11 @@
      center: { lat: 44.7981, lng: 20.4691 }
    }
    var map = new google.maps.Map(document.getElementById('map'), options);
+
+   var marker = new google.maps.Marker({
+     position:{lat: 44.7992, lng: 20.4695},
+     map : map
+   })
  }
 
 
