--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   
 
       <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp2TeN4jSXWRV1JHlwiP6cbj-jiikvR9M&callback=initMap&v=weekly&language=ja&region=JP"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzPHnN3o3ZvneIwj6D_lbgiT8aoqT2aaE&callback=initMap&v=weekly&language=ja&region=JP"
       async
     ></script>
       
@@ -113,6 +113,10 @@
      position:{lat: 44.7992, lng: 20.4695},
      map : map
    })
+
+   var trafficLayer = new google.maps.TrafficLayer();
+   trafficLayer.setMap(map);
+   return false;
  }
 
 
